--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -13,6 +13,7 @@ NODE_ENV=development
 RAMI_LEVY_API_KEY=your_rami_levy_bearer_token
 RAMI_LEVY_ECOM_TOKEN=your_RAMI_LEVY_ECOM_TOKEN
 RAMI_LEVY_COOKIE=your_cookie_string
+RAMI_LEVY_USER_ID=your_rami_levy_user_id
 
 # Shufersal API credentials (shufersal.co.il)
 SHUFERSAL_COOKIE=your_shufersal_cookie_string
