--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,9 @@
 PORT=3001
 NODE_ENV=development
 
+# Database Configuration
+DATABASE_URL=postgresql://username:password@ep-xxx.region.neon.tech/dbname?sslmode=require
+
 # API Keys (Add your actual keys here)
 GEMINI_API_KEY=your_gemini_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
