--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "zod": "^3.22.4",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "@neondatabase/serverless": "^0.10.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
