--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.3.1",
     "zod": "^3.22.4",
     "winston": "^3.11.0",
-    "@neondatabase/serverless": "^0.10.1"
+    "@neondatabase/serverless": "^0.10.1",
+    "@modelcontextprotocol/sdk": "1.13.1"
+
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
